--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Montiel&Cia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="container-fluid">
-        <div class="col-8 bg-gunmental">
-            <h1 class="text-white">Estas en el lugar perfecto para poner tus finanzas en orden!</h1>
-            <h2 class="text-muted">M&C-Montiel y Cia contadores publicos con mas de 15 años de experiencia</h2>
-        </div>
-        <div class="col">
-            <img src="" alt="">
+        <div class="row bg-image-main">
+            <div class="col-8 bg-gunmental p-9">
+                <h1 class="text-white pt-5 mb-5 text-start fw-bold">Estas en el lugar perfecto para poner tus finanzas en orden!</h1>
+                <h3 class="text-muted mt-3 mb-5 text-center">M&C-Montiel y Cia contadores publicos con mas de 15 años de experiencia</h3>
+                <a href="http://" target="_blank" rel="noopener noreferrer" class="btn btn-light fw-bold">Contactanos ahora <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+                    <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+                  </svg></a>
+                <hr class="border border-primary border-1 opacity-75">
+                <a href="tel:+" class="tel">2223 456 123</a>
+            </div>
         </div>
     </header>
     <main class="container">
