Ajustes Diseño+Whats+Maps

--- a/contacto.html
+++ b/contacto.html
@@ -46,10 +46,8 @@
             </div>
 
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-                <h1 class="display-4 fw-normal">Pricing</h1>
-                <p class="fs-5 text-muted">Quickly build an effective pricing table for your potential customers with
-                    this Bootstrap example. It’s built with default Bootstrap components and utilities with little
-                    customization.</p>
+                <h1 class="display-4 fw-normal">Contacto</h1>
+                <p class="fs-5 text-muted">Estamos para servirte, no dudes en escribirnos nosotros te atenderemos con la mejor disposición y el mejor acompañamiento que nos distingue.</p>
             </div>
         </header>
 
@@ -111,86 +109,9 @@
                 </div>
             </div>
 
-            <h2 class="display-6 text-center mb-4">Compare plans</h2>
-
-            <div class="table-responsive">
-                <table class="table text-center">
-                    <thead>
-                        <tr>
-                            <th style="width: 34%;"></th>
-                            <th style="width: 22%;">Free</th>
-                            <th style="width: 22%;">Pro</th>
-                            <th style="width: 22%;">Enterprise</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row" class="text-start">Public</th>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                        </tr>
-                        <tr>
-                            <th scope="row" class="text-start">Private</th>
-                            <td></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                        </tr>
-                    </tbody>
-
-                    <tbody>
-                        <tr>
-                            <th scope="row" class="text-start">Permissions</th>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                        </tr>
-                        <tr>
-                            <th scope="row" class="text-start">Sharing</th>
-                            <td></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                        </tr>
-                        <tr>
-                            <th scope="row" class="text-start">Unlimited members</th>
-                            <td></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                        </tr>
-                        <tr>
-                            <th scope="row" class="text-start">Extra security</th>
-                            <td></td>
-                            <td></td>
-                            <td><svg class="bi" width="24" height="24">
-                                    <use xlink:href="#check" />
-                                </svg></td>
-                        </tr>
-                    </tbody>
-                </table>
+            <h2 class="display-6 text-center mb-4">Locación</h2>
+            <div class="container px-auto">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.783799156486!2d-98.22264728599559!3d19.029246258387367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc0caa5231805%3A0x7cf0c0cc5ccec590!2sC.%2049%20Pte.%201119%2C%20Reforma%20Agua%20Azul%2C%2072430%20Puebla%2C%20Pue.!5e0!3m2!1ses!2smx!4v1666645146529!5m2!1ses!2smx" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </main>
 
