--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/img/contabilidad.png" type="image/png">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
                     en orden!</h1>
                 <h3 class="text-muted mt-3 mb-5">M&C-Montiel y Cia contadores publicos con mas de 30 años de experiencia
                 </h3>
-                <a href="http://" target="_blank" rel="noopener noreferrer" class="btn btn-light fw-bold">Contactanos
+                <a href="https://wa.me/2223456123?text=Me%20gustaria%20preguntar%20por%20sus%20servicios.%20" target="_blank" rel="noopener noreferrer" class="btn btn-light fw-bold">Contactanos
                     ahora <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
                         <path
@@ -35,7 +36,7 @@
 
         <section class="container">
             <h2 class="display-4 fw-bold text-center">SERVICIOS</h2>
-            <div class="row m-4 align-items-center">
+            <div class="row m-4 align-items-top">
                 <div class="col-lg-4">
                     <img class="bd-placeholder-img rounded-circle" width="140" height="140"
                         src="assets/img/cProduct1.jpg">
@@ -65,7 +66,7 @@
                 </div><!-- /.col-lg-4 -->
             </div>
     
-            <div class="row m-4 align-items-center">
+            <div class="row m-4 align-items-top">
                 <div class="col-lg-4">
                     <img class="bd-placeholder-img rounded-circle" width="140" height="140"
                         src="assets/img/cProduct4.jpg">
@@ -95,7 +96,7 @@
                 </div><!-- /.col-lg-4 -->
             </div>
     
-            <div class="row m-4 align-items-center">
+            <div class="row m-4 align-items-top">
                 <div class="col-lg-4">
                     <img class="bd-placeholder-img rounded-circle" width="140" height="140"
                         src="assets/img/cProduct1.jpg">
